# study-notes

./: .gitignore  README.md
Python-Basics/: pyproject.toml  python学习笔记.md
Python-Basics/digital_cleaner/: README.md  classifier.py  file.py  history.py  main.py  requirements.txt
Python-Basics/digital_cleaner/cli/: main_menu.py
Python-Basics/digital_cleaner/core/: classifier.py
Python-Basics/digital_cleaner/models/: file.py
Python-Basics/digital_cleaner/utils/: history.py
