[project]
name = "Python-Basics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chu8877d3", email = "2569073383@qq.com"},
]
dependencies = ["logger>=1.4", "tqdm>=4.67.1", "loguru>=0.7.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
distribution = false

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "B", "C4", "N", "UP", "YTT"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"